# li-ricss

./: README.md
backend/: .env.example  README.md  main.py  pyproject.toml
backend/app/: settings.py
backend/app/api/routers/: chat.py  new.py
backend/app/engine/: __init__.py  constants.py  generate.py  loader.py
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/@interfaces/: chat-handler.ts
frontend/app/api/file-upload/: route.ts
frontend/app/components/: ChatActions.tsx  ChatAvatar.tsx  ChatInput.tsx  ChatMessage.tsx  ChatMessages.tsx  ChatSection.tsx  CollapsibleMessages.tsx  DataStatus.tsx  FileUploader.tsx  MarkdownParser.tsx  button.tsx  chat-actions.tsx  chat-handler.ts  chat-input.tsx  chat-message.tsx  chat-messages.tsx  chat-section.tsx  codeblock.tsx  file-uploader.tsx  header.tsx  markdown.tsx  selector.tsx  status.tsx  upload-image-preview.tsx
frontend/app/components/chat/: chat-actions.tsx  chat-avatar.tsx  chat-input.tsx  chat-message.tsx  chat-messages.tsx  chat-section.tsx
frontend/app/components/ui/: selector.tsx
frontend/app/components/ui/chat/: chat-input.tsx  chat.interface.ts
frontend/app/containers/: ChatSection.tsx  Header.tsx
frontend/app/hooks/: use-copy-to-clipboard.tsx  useCopyToClipboard.tsx
frontend/app/lib/: constants.ts  interfaces.ts  utils.ts
frontend/public/uploads/: sample-file.txt
