[tool]
[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = [ "Marcus Schiesser <mail@marcusschiesser.de>" ]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.12"
fastapi = "^0.109.1"
python-dotenv = "^1.0.0"
llama-index = "0.10.30"
llama-index-core = "0.10.30"
llama-index-agent-openai = "0.2.2"
llama-index-embeddings-huggingface = "0.2.0"
huggingface-hub = "0.22.2"
llama-index-llms-ollama = "0.1.2"
llama-index-llms-openai = "0.1.16"
llama-index-llms-openai-like = "0.1.3"
llama-index-program-openai = "0.1.5"
llama-index-question-gen-openai = "0.1.3"
llama-index-readers-file = "0.1.19"
llamaindex-py-client = "0.1.18"

[tool.poetry.dependencies.uvicorn]
extras = [ "standard" ]
version = "^0.23.2"

[tool.poetry.dependencies.docx2txt]
version = "^0.8"

[build-system]
requires = [ "poetry-core" ]
build-backend = "poetry.core.masonry.api"